# bnbsol

./: DEPLOYMENT.md  README.md  pnpm-lock.yaml
app/: globals.css  page.tsx
bridge-program/: Anchor.toml  Cargo.toml
bridge-program/src/: lib.rs
components/: code-repository.tsx  footer.tsx  hero.tsx  technical-explanation.tsx
contracts/: BnbBridge.sol  foundry.toml  package.json
contracts/script/: Deploy.s.sol
scripts/: deploy.sh  run-validator.sh
validator/: Cargo.toml
validator/src/: bnb_monitor.rs  main.rs  solana_monitor.rs  types.rs
