[package]
name = "bnb-solana-validator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "validator"
path = "src/main.rs"

[dependencies]
anchor-client = "0.29.0"
anchor-lang = "0.29.0"
solana-client = "1.17.0"
solana-sdk = "1.17.0"
tokio = { version = "1.35.0", features = ["full"] }
web3 = "0.19.0"
ethers = "2.0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
sha3 = "0.10"
